# nbnets

./: .gitignore  LICENSE  README.md  configuration.py  demo_web.py  eval_15k_text.py  main.py  neural_framework.py  neural_graph.py  neuro_blocks.py  neuro_mesh.py  pyproject.toml  simulations.py  trainers.py  utils.py
MNIST/: nist_extractor.py
components/: common.py  mesh.py  nf.py  nf_clients.py
configs/: cart_pole.yml  character.yml  dual_text.yml  example_template.yml  mNIST.yml  xor.yml
proto/: NFM.proto
sensory/: __init__.py  base.py
sensory/gym/: interfaces.py
sensory/image/: interfaces.py
sensory/text/: bert.py  interfaces.py
sensory/xor/: iterfaces.py
training_data/: TheCountOfMonteCristo.txt  wordlist.10000
